--- a/Album Lab/albumStyles.css
+++ b/Album Lab/albumStyles.css
@@ -1,6 +1,8 @@
 body{
 background-color: lightblue;}
 
+table {display: table;   /* Allow the centering to work */
+	margin: 0 auto;}
 
 
 UL{
@@ -8,4 +10,9 @@ font-size: 20px;
 
 font-style: italic;
 font-weight: bold;
+text-align: center;
+
 }
+li{
+display: inline-block;}
+
