--- a/Album Lab/albumStyles.css
+++ b/Album Lab/albumStyles.css
@@ -3,8 +3,13 @@ body
 {
 } 
 
+ 
+
 table {display: table;   /* Allow the centering to work */
-	margin: 0 auto;}
+	margin: 0 auto;
+	background-color: DarkTurquoise 
+	font-style: italic;
+}
 
 
 UL{
@@ -21,3 +26,22 @@ display: inline-block;}
 #rush{
 height: 100px;}
 
+
+
+a:hover{
+color:red;
+ text-decoration: underline;}
+ 
+
+ 
+
+ 
+ a:active{
+ 
+ color:blue;}
+ a {
+text-decoration:none;}
+
+tr{font-style: italic;}
+ 
+ 
